k8s/ecommerce-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-app
  labels:
    name: dev-app
    environment: dev
