k8s/order-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  labels:
    app: order-deployment
  namespace: dev-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-pod
  template:
    metadata:
      labels:
        app: order-pod
    spec:
      containers:
        - name: order-service
          image: order-service:1.0
          ports:
            - containerPort: 8080
