k8s/dpc-order-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dpc-order-service
  namespace: dev-app
spec:
  type: ClusterIP
  selector:
    app: dpc-order-pod
  ports:
    - name: app-port-mapping
      protocol: TCP
      port: 80
      targetPort: 8080
