k8s/order-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-app
  namespace: dev-app
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
        rewrite ^/(.*)/$ /$1 permanent
spec:
  rules:
  - host: teqmonic.com
    http:
      paths:
      - pathType: Prefix
        path: "/orders"
        backend:
          service:
            name: order-service
            port:
              number: 80
